# derive

./: .ghci  .gitignore  .hlint.yaml  .travis.yml  CHANGES.txt  Derive.hs  Example.hs  Main.hs  README.md  README.txt  Setup.hs  boring  derive.cabal  derive.htm  push.bat  todo.txt  travis.hs  travis.sh
Data/: Derive.hs  DeriveDSL.hs  DeriveGuess.hs  DeriveMain.hs  DeriveSYB.hs  DeriveTH.hs  DeriveTraversal.hs
Data/Derive/: All.hs  AllDerivers.hs  Arbitrary.hs  Arbitrary2.hs  ArbitraryOld.hs  Arities.hs  Binary.hs  BinaryDefer.hs  BinaryOld.hs  Bounded.hs  Data.hs  DataAbstract.hs  Default.hs  Driver.hs  Enum.hs  EnumCyclic.hs  Eq.hs  Example.hs  FixedPpr.hs  Fold.hs  Foldable.hs  From.hs  Functor.hs  Has.hs  Is.hs  JSON.hs  LazySet.hs  Lens.hs  Monoid.hs  NFData.hs  Ord.hs  Peephole.hs  PlateDirect.hs  PlateTypeable.hs  Play.hs  PlayAll.hs  Read.hs  Ref.hs  SYB.hs  Serial.hs  (+12 more)
Data/Derive/Class/: Arities.hs  Default.hs
Data/Derive/DSL/: Apply.hs  DSL.hs  Derive.hs  HSE.hs  SYB.hs
Data/Derive/Instance/: Arities.hs
Data/Derive/Internal/: Derivation.hs  Instance.hs  Test.hs  Traversal.hs
Derive/: Derivation.hs  Flags.hs  Generate.hs  Main.hs  Test.hs  TestInstances.hs  Utils.hs
Language/: Haskell.hs
Language/Haskell/: Convert.hs
Language/Haskell/TH/: All.hs  Compat.hs  Data.hs  ExpandSynonym.hs  FixedPpr.hs  Helper.hs  Peephole.hs  SYB.hs  Semtex.hs
Test/: All.hs  Data.hs  Standard.hs  UpdateIs.hs
academic/aaip2009/: derive.tex
academic/aaip2009-post/: derive.tex
academic/yds2007/: derive.bib  derive.tex  make.bat
derive2/: Apply.hs  DSL.hs  Derive.hs  Examples.hs  Guess.hs  Guess2.hs  HSE.hs  Main.hs  SYB.hs
examples/: Example.hs  Main.hs  example.bat
old/Test/: All.hs  Data.hs  Standard.hs  StandardAlt.hs
old/tests/: M1.hs  Makefile  QuickCheck.expected.hs
src/Data/: DeriveDSL.hs  DeriveTH.hs
src/Data/Derive/: All.hs  Arbitrary.hs  ArbitraryOld.hs  Arities.hs  Binary.hs  BinaryDefer.hs  Bounded.hs  Data.hs  DataAbstract.hs  Default.hs  Enum.hs  EnumCyclic.hs  Eq.hs  Fold.hs  Foldable.hs  From.hs  Has.hs  Is.hs  JSON.hs  LazySet.hs  Lens.hs  Monoid.hs  NFData.hs  Ord.hs  Read.hs  Ref.hs  Serial.hs  Serialize.hs  Set.hs  Show.hs  Typeable.hs  Uniplate.hs  UniplateDirect.hs  UniplateTypeable.hs  Update.hs
src/Data/Derive/DSL/: Apply.hs  DSL.hs  Derive.hs  HSE.hs  SYB.hs
src/Data/Derive/Instance/: Arities.hs
src/Data/Derive/Internal/: Derivation.hs  Test.hs  Traversal.hs
src/Derive/: Derivation.hs  Generate.hs  Main.hs  Test.hs  Utils.hs
src/Language/: Haskell.hs
src/Language/Haskell/: Convert.hs
src/Language/Haskell/TH/: Compat.hs  Data.hs  ExpandSynonym.hs  Helper.hs  Peephole.hs  SYB.hs
tests/: M2.hs  MTest.hs  Makefile  QuickCheck.hs  Small.expected.hs  Small.hs
yds2007/: derive.bib  derive.fmt  derive.tex
